[tool.poetry]
name = "PyHa"
version = "0.0.0"
description = "PyHa"
authors = [
    "UCSD Engineers for Exploration <e4e@ucsd.edu>",
    "Jacob Ayers <jgayers@ucsd.edu>",
    "Natalie Franklin",
    "Sam Prestrelski <sprestrelski@ucsd.edu>",
    "Sean Perry <shperry@ucsd.edu>",
    "Mugen Blue",
    "Nishant Balaji",
    "Teo Maldonado",
    "Vanessa Salgado",
    "Pranjal Chatterjee",
    "Shreyas Anantha Ramaprasad",
    "Shravan Konduru",
    "Benjamin Cates"
]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
repository = 'https://github.com/UCSD-E4E/PyHa'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
nas_unzip = { git="https://github.com/UCSD-E4E/synology-download.git", rev="dcca086" }
synology-api = "0.5.1"
autopep8 = "^2.0.4"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
librosa = "^0.10.1"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
keras = "^2.8.0"
pandas = "^2.0.0"
matplotlib = "^3.4.1"
scipy = "^1.6.2"
# See https://github.com/pytorch/pytorch/issues/100974
torch =  ">=2.0.0, !=2.0.1, !=2.1.0"
tensorflow = {version = "^2.13.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]